[gd_scene load_steps=28 format=2]

[ext_resource path="res://class/Jukebox.gd" type="Script" id=1]
[ext_resource path="res://asset/Credits/Scrollbar Pressed.PNG" type="Texture" id=2]
[ext_resource path="res://asset/Credits/Scrollbar Grabber.PNG" type="Texture" id=3]
[ext_resource path="res://Splash.png" type="Texture" id=4]
[ext_resource path="res://asset/Credits/Broken Reality.mp3" type="AudioStream" id=5]
[ext_resource path="res://asset/Credits/Scrollbar Highlight.PNG" type="Texture" id=6]
[ext_resource path="res://asset/Credits/Dark Fog.mp3" type="AudioStream" id=7]
[ext_resource path="res://asset/Credits/Final Count.mp3" type="AudioStream" id=8]
[ext_resource path="res://asset/Credits/Esiltir - Calamity.mp3" type="AudioStream" id=9]
[ext_resource path="res://resource/emphasized_theme.tres" type="Theme" id=10]
[ext_resource path="res://resource/tech_theme.tres" type="Theme" id=11]
[ext_resource path="res://class/AutomatedScrollContainer.gd" type="Script" id=12]
[ext_resource path="res://scene/Alert.tscn" type="PackedScene" id=13]
[ext_resource path="res://scene/Credits.gd" type="Script" id=14]
[ext_resource path="res://addons/FileLabel/type.gd" type="Script" id=15]

[sub_resource type="Animation" id=4]
resource_name = "Fade Out"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("TitleAnimation/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TitleAnimation/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ImageTexture" id=6]

[sub_resource type="StyleBoxTexture" id=7]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=10]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=13]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="Image" id=19]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 77, 75, 89, 4, 77, 75, 89, 25, 77, 75, 89, 64, 77, 75, 89, 93, 77, 75, 89, 102, 77, 75, 89, 102, 77, 75, 89, 93, 77, 75, 89, 64, 77, 75, 89, 25, 77, 75, 89, 4, 0, 0, 0, 0, 77, 75, 89, 4, 77, 75, 89, 40, 64, 62, 74, 147, 42, 41, 47, 240, 32, 32, 36, 252, 30, 30, 35, 255, 30, 30, 35, 255, 32, 32, 36, 252, 42, 41, 47, 240, 64, 62, 74, 147, 77, 75, 89, 40, 77, 75, 89, 4, 77, 75, 89, 25, 63, 62, 73, 148, 31, 31, 36, 252, 32, 32, 37, 255, 34, 34, 39, 255, 35, 35, 39, 255, 35, 35, 39, 255, 34, 34, 39, 255, 32, 32, 37, 255, 31, 31, 36, 252, 63, 62, 73, 148, 77, 75, 89, 25, 77, 75, 89, 64, 42, 41, 47, 240, 32, 32, 37, 255, 35, 35, 40, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 35, 35, 40, 255, 32, 32, 37, 255, 42, 41, 47, 240, 77, 75, 89, 64, 77, 75, 89, 93, 32, 32, 36, 253, 34, 34, 39, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 34, 34, 39, 255, 32, 32, 36, 253, 77, 75, 89, 93, 77, 75, 89, 103, 30, 30, 35, 255, 35, 35, 39, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 35, 35, 39, 255, 30, 30, 35, 255, 77, 75, 89, 103, 77, 75, 89, 103, 30, 30, 35, 255, 35, 35, 39, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 35, 35, 39, 255, 30, 30, 35, 255, 77, 75, 89, 103, 77, 75, 89, 93, 32, 32, 36, 253, 34, 34, 39, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 34, 34, 39, 255, 32, 32, 36, 253, 77, 75, 89, 93, 77, 75, 89, 64, 42, 41, 47, 240, 32, 32, 37, 255, 35, 35, 40, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 37, 37, 42, 255, 35, 35, 40, 255, 32, 32, 37, 255, 42, 41, 47, 240, 77, 75, 89, 64, 77, 75, 89, 26, 63, 62, 73, 150, 31, 31, 36, 252, 32, 32, 37, 255, 34, 34, 39, 255, 35, 35, 39, 255, 35, 35, 39, 255, 34, 34, 39, 255, 32, 32, 37, 255, 31, 31, 36, 252, 63, 62, 73, 150, 77, 75, 89, 26, 77, 75, 89, 4, 77, 75, 89, 40, 63, 62, 73, 149, 42, 41, 47, 240, 32, 32, 36, 253, 30, 30, 35, 255, 30, 30, 35, 255, 32, 32, 36, 253, 42, 41, 47, 240, 63, 62, 73, 149, 77, 75, 89, 40, 77, 75, 89, 4, 0, 0, 0, 0, 77, 75, 89, 4, 77, 75, 89, 25, 77, 75, 89, 64, 77, 75, 89, 93, 77, 75, 89, 102, 77, 75, 89, 102, 77, 75, 89, 93, 77, 75, 89, 64, 77, 75, 89, 25, 77, 75, 89, 4, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id=15]
flags = 4
flags = 4
image = SubResource( 19 )
size = Vector2( 12, 12 )

[sub_resource type="StyleBoxTexture" id=16]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
texture = SubResource( 15 )
region_rect = Rect2( 0, 0, 12, 12 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0
modulate_color = Color( 0.964706, 0.933333, 0.184314, 1 )

[sub_resource type="StyleBoxTexture" id=17]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
texture = SubResource( 15 )
region_rect = Rect2( 0, 0, 12, 12 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0
modulate_color = Color( 0.184314, 0.270588, 0.964706, 1 )

[sub_resource type="Theme" id=18]
VScrollBar/icons/decrement = SubResource( 6 )
VScrollBar/icons/decrement_highlight = SubResource( 6 )
VScrollBar/icons/decrement_pressed = SubResource( 6 )
VScrollBar/icons/increment = SubResource( 6 )
VScrollBar/icons/increment_highlight = SubResource( 6 )
VScrollBar/icons/increment_pressed = SubResource( 6 )
VScrollBar/styles/grabber = SubResource( 7 )
VScrollBar/styles/grabber_highlight = SubResource( 10 )
VScrollBar/styles/grabber_pressed = SubResource( 13 )
VScrollBar/styles/scroll = SubResource( 16 )
VScrollBar/styles/scroll_focus = SubResource( 17 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Credits" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 14 )

[node name="TitleAnimation" type="AnimationPlayer" parent="."]
"anims/Fade Out" = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Label" type="Label" parent="TitleAnimation"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.5
margin_top = 26.0
margin_right = 60.5
margin_bottom = 71.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Credits"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 69.0
margin_bottom = 445.0
focus_mode = 2
theme = SubResource( 18 )
scroll_horizontal_enabled = false
script = ExtResource( 12 )
vert_scroll_amount = 2
time_between_scrolls = 0.05

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 784.0
margin_bottom = 1087.0
alignment = 1

[node name="Padding" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
margin_right = 784.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
color = Color( 0, 0, 0, 1 )

[node name="Body" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 404.0
margin_right = 784.0
margin_bottom = 423.0
rect_min_size = Vector2( 784, 0 )
theme = ExtResource( 11 )
custom_constants/line_spacing = 3
custom_styles/normal = SubResource( 3 )
align = 1
autowrap = true
script = ExtResource( 15 )
file_path = "res://CREDIT.txt"

[node name="Logo" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 427.0
margin_right = 784.0
margin_bottom = 683.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Padding2" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 687.0
margin_right = 784.0
margin_bottom = 1087.0
rect_min_size = Vector2( 0, 400 )
color = Color( 0, 0, 0, 1 )

[node name="Alert" parent="." instance=ExtResource( 13 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
script = ExtResource( 1 )
music = [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ) ]

[connection signal="begin_reached" from="ScrollContainer" to="." method="_on_ScrollContainer_begin_reached"]
[connection signal="end_reached" from="ScrollContainer" to="." method="_on_ScrollContainer_end_reached"]
[connection signal="gui_input" from="ScrollContainer" to="." method="_on_ScrollContainer_gui_input"]
